Update and rename html.html to HappyBirthdayThuHuyen.html

--- a/HappyBirthdayThuHuyen.html
+++ b/HappyBirthdayThuHuyen.html
@@ -43,9 +43,9 @@
       <div id="ground"></div>
     </div>
     <div class="text-overlay">
-      <b>Hoàng Văn Hiếu</b>
+      <b>Happy Birthday</b>
       <br/>
-        <b>Yêu iem không bao giờ xai</b>
+        <b>Chúc bé Huyền sinh nhật vui vẻ nha <3</b>
       </div>
       <div id="music-container">
         <iframe
